# vep-2024-post-mortem

./: .github_token  .gitignore  Dockerfile  README.md  pyproject.toml
exports/: 20241216_cd_turnout.csv  20241216_sd_turnout.csv  20241217_hd_turnout.csv  G2024_vep_voterids.csv  result_comparisons_2020_to_2024.csv
src/vep_2024_data_shaping/: __init__.py  critical_data.py  processing.py  references.py
