[project]
name = "vep-2024-data-shaping"
version = "0.1.0"
description = "Data transformations and reports for VEP 2024 Project"
readme = "README.md"
authors = [
    { name = "John R. Eakin", email = "dev@abstractdata.io" }
]
requires-python = ">=3.12.5"
dependencies = [
    "icecream>=2.1.3",
    "jupyter>=1.1.1",
    "pandas>=1.5",
    "polars>=1.16.0",
    "pydantic>=2.10.3",
    "rich>=13.9.4",
    "vep_2024",
]

[project.scripts]
vep-2024-data-shaping = "vep_2024_data_shaping:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
vep-2024 = [
    { path = "../vep-2024", editable=true},
   # { git = "https://github.com/Abstract-Data/vep-2024.git", marker="sys_platform=='linux'"},
]
