[project]
name = "vep-2024-data-shaping"
version = "0.1.0"
description = "Data transformations and reports for VEP 2024 Project"
readme = "README.md"
authors = [
    { name = "John R. Eakin", email = "dev@abstractdata.io" }
]
requires-python = ">=3.12.8"
dependencies = [
    "onepassword-sdk>=0.1.5",
    "polars>=1.16.0",
    "vep-2024; sys_platform=='darwin'",
    "vep-2024; sys_platform=='linux'",
]

[project.scripts]
vep-2024-data-shaping = "vep_2024_data_shaping:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
vep-2024 = [
    { path = "../vep-2024", marker="sys_platform=='darwin'", editable=true},
    { git = "git+ssh://git@github.comAbstract-Data/vep-2024.git", marker="sys_platform=='linux'", branch="disobey-grumpy-kale"},
]
